--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/samples/OpenGL/glm"]
 	path = src/samples/OpenGL/glm
 	url = https://github.com/g-truc/glm/
+[submodule "src/samples/Vulkan/glm"]
+	path = src/samples/Vulkan/glm
+	url = https://github.com/g-truc/glm/
